dfir_rs/tests/compile-fail-stable/surface_join_persistence_extra.stderr
error: `join` should have at least 0 and at most 2 persistence lifetime arguments, actually has 3.
 --> tests/compile-fail-stable/surface_join_persistence_extra.rs:5:20
  |
5 |         j = join::<'static, 'static, 'static>() -> for_each(std::mem::drop);
  |                    ^^^^^^^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
 --> tests/compile-fail-stable/surface_join_persistence_extra.rs:9:8
  |
9 |     df.run_available_sync();
  |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
